# collision-filter-mpc

./: CMakeLists.txt  Dockerfile  README.md  acados_install.sh  package.xml
config/: joy_config.yaml  nav2_safe_teleop.rviz  scout2_config.yaml  turtlebot_waffle_config.yaml
include/safety_filter_mpc/: config.hpp  marker_publisher.hpp  obstacle_extract.hpp  safety_filter_mpc_node.h  utils.hpp
launch/: safe_teleop.launch.py
scripts/: generate_solver.sh  safety_filter_mpc.py
scripts/safety_filter_scripts/: __init__.py  logging_setup.py  plots.py
scripts/safety_filter_scripts/safety_filter_ocp/: __init__.py  helper.py  simulation.py  skid_steer_model.py  solver.py
src/: safety_filter_mpc_node.cpp
test/: test_safety_filter.launch.py
