<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>safety_filter_mpc</name>
    <version>0.0.0</version>
    <description>A MPC based Safety-Filter, that turns an unsafe input into a safe input based on the occupancy map.</description>
    <maintainer email="josua.lindemann@outlook.de">Josua Lindemann</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- dependencies -->
    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>eigen</depend>

    <test_depend>launch_testing</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
